# meson-template

./: README.md  init.sh  meson.build
lib/: meson.build
scripts/: copy_to.py  recursive_search.py
src/: meson.build
